--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src='https://api.mapbox.com/mapbox.js/v3.0.1/mapbox.js'></script>
         <link rel="shortcut icon" href="https://raw.github.com/jlord/hack-spots/master/favico.png"/>
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta Type="viewport" content="width=device-width, initial-scale=1.0"/>
         <link href='https://api.tiles.mapbox.com/mapbox.js/v3.0.1/mapbox.css' rel='stylesheet' />
         <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic'>
         <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700'>
