--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </ul>
             <ul>
                 <li><a href="https://maps.google.com/maps?q={{address}},{{city}},{{state}}" target="_blank">View in Google Maps</a></li>
-                <li><a href="http://www.yelp.com/search?find_desc={{name}}&find_loc={{city}},{{state}}" target="_blank">Find on Yelp</a></li>
+                <li><a href="http://www.yelp.com/search?find_desc={{Type}}&find_loc={{city}},{{state}}" target="_blank">Find on Yelp</a></li>
             </ul>
         {{/rows}}
     </script>
