--- a/index.html
+++ b/index.html
@@ -193,7 +193,16 @@ L.tileLayer(
                 numberOfSpots: gData.length
             })
             $('#theNumberofSpots').html(theNumberofSpots)
-
+            
+            if(window.location.hash) {		+           
+                $('#tableFilter').val(window.location.hash.substring(1)).keyup()		
+                $('.spotRow').first().click()		
+            }		
+        }		
+		
+        $(document).on('keyup', '#tableFilter', function() {		
+            window.location.hash = $(this).val()		
+            $('.spotRow').first().click()
            
         })
     </script>
