--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="css/MarkerCluster.Default.css" />
 <style>
         body { margin:0; padding:0; }
-        #map { position:absolute; top:0; bottom:0; width:100%; }
+        #map { position:absolute; top:0; bottom:0; width:750px; }
 </style>
     </head>
 	
