--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ map.on('load', function() {
                 'type': 'identity',
                 'property': 'min_height'
             },
-            'fill-extrusion-opacity': .6
+            'fill-extrusion-opacity': 0
         }
     });
 });
