--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@ L.tileLayer(
     'https://api.mapbox.com/styles/v1/sheld0611/ciyimt6dm00382smyek3ub7yl/tiles/256/{z}/{x}/{y}?access_token=' + L.mapbox.accessToken, {
         tileSize: 512,
         zoomOffset: -1,
+	pitch:	50,
+	bearing: 40,
         attribution: '© <a href="https://www.mapbox.com/map-feedback/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
     }).addTo(map);
 	  
