--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
    
        
-<div id="map"></div>
+<div id='map'></div>
 <script id="hackSpotsTable" type="text/html">		
         <table>		
         <tr><th class="tHeader">Name</th><th class="tHeader">Address</th><th class="tHeader">City</th><th class="tHeader">State</th><th class="tHeader">Country</th><th class="">Elsewhere</th></tr>		
