--- a/index.html
+++ b/index.html
@@ -92,7 +92,16 @@
             var URL = "1whsDOpBdn4IR6BHggiUZwelpnseThSjAR9yFPFEStMA"
                 Tabletop.init({ key: URL, callback: showInfo, simpleSheet: true })
         })
-
+	      // so long, so messy
+        function showInfo(gData) {
+            tableOptions = {
+                "data": gData,
+                "tableDiv": "#hackSpotsTable",
+                "filterDiv": "#tableFilter"
+            }
+            // make the table, and the search bar
+            Sheetsee.makeTable(tableOptions)
+            Sheetsee.initiateTableFilter(tableOptions)
 
 
             // create geoJSON with coordinates and other
